# ApproxMVBB-backup

./: .gitignore  .travis.yml  CMakeLists.txt
benchmarks/: CMakeLists.txt
cmake/: DefineApproxMVBBExternalSources.cmake  DefineApproxMVBBSources.cmake  FindPugiXML.cmake  IncludeInstallFolderPostfix.cmake
example/approxMVBB/: CMakeLists.txt
example/approxMVBB/src/: main.cpp
example/kdTreeFiltering/: CMakeLists.txt
example/kdTreeFiltering/src/: main.cpp
example/libraryUsage/: CMakeLists.txt
include/ApproxMVBB/: KdTree.hpp  PointFunctions.hpp
include/ApproxMVBB/Common/: AssertionDebug.hpp  LogDefines.hpp  MyContainerTypeDefs.hpp  MyMatrixTypeDefs.hpp
lib/: CMakeLists.txt
lib/cmake/: approxmvbb-config-dependencies.cmake
tests/: CMakeLists.txt
travis/: build.sh  install_linux.sh  install_osx.sh
